fix boolean locked not working and fix ui missalignment

--- a/docdoku-server/docdoku-server-web/yo/app/less/common/attributes.less
+++ b/docdoku-server/docdoku-server-web/yo/app/less/common/attributes.less
@@ -6,6 +6,11 @@
     opacity: 0.2;
     cursor: move;
   }
+
+    .fa.fa-bars.sortable-handler.shift-margin{
+        margin-right: 24px;
+    }
+
   .fa-times {
     float: right;
     font-size: 15px;
@@ -59,6 +64,10 @@
       display: -webkit-inline-box;
         max-width: 145px;
     }
+
+      &.shift-margin{
+          margin-left: 8px;
+      }
   }
 
   .attribute-link  {
